move ft_daily_status to mon database

--- a/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
@@ -32,7 +32,7 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_cr
 flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_CRA_GPRS_POST PARTITION(SESSION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 flux.inline.post-exec-queries += "DELETE FROM AGG.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE = '###SLICE_VALUE###'"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_a_gprs_activity_post.hql"
-//flux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_GPRS_ACTIVITY_POST' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  AGG.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###')T"
+//flux.inline.post-exec-queries += "INSERT INTO MON.FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_GPRS_ACTIVITY_POST' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  AGG.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###')T"
 
 //flux.inline.post-exec-queries += "ALTER TABLE AGG.FT_A_GPRS_ACTIVITY_POST DROP PARTITION(DATECODE = '###SLICE_VALUE###')"
 //flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/computer_and_insert_into_ft_a_gprs_activity_post.hql"
