--- a/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
@@ -34,7 +34,7 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_f
 
 flux.inline.post-exec-queries += "ALTER TABLE AGG.FT_A_DATA_TRANSFER DROP PARTITION(EVENT_DATE = '###SLICE_VALUE###')"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_a_data_transfer.hql"
-//flux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_DATA_TRANSFER' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  AGG.FT_A_DATA_TRANSFER WHERE EVENT_DATE='###SLICE_VALUE###')T"
+//flux.inline.post-exec-queries += "INSERT INTO MON.FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_DATA_TRANSFER' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  AGG.FT_A_DATA_TRANSFER WHERE EVENT_DATE='###SLICE_VALUE###')T"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_data_transfer_activity.hql"
 //flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_data_transfer.hql"
