--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -171,19 +171,19 @@ crontasks +=
   }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_REFILL_RECEIVER",
-    cron = "0 20 */1 * * ?",
-    configFile = "/PROD/CONF/FT_A_REFILL_RECEIVER/load-ft-a-refill-receiver.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_REFILL_RECEIVER",
+//    cron = "0 20 */1 * * ?",
+//    configFile = "/PROD/CONF/FT_A_REFILL_RECEIVER/load-ft-a-refill-receiver.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
