programmation de LOAD_FT_CLIENT_LAST_SITE_DAY

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -234,9 +234,9 @@ crontasks +=
 
 crontasks +=
   {
-    instanceId = "LOAD_FT_EMERGENCY_CREDIT_ACTIVITY",
+    instanceId = "LOAD_FT_CLIENT_LAST_SITE_DAY",
     cron = "0 28 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-credit-activity.conf",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-last-update-ec-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
@@ -293,3 +293,36 @@ crontasks +=
   }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_EMERGENCY_CREDIT_ACTIVITY",
+    cron = "0 50 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-credit-activity.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
