update script for CREATE TABLE AGG.FT_A_VAS_REVENUE_DAILY and conf for sqoop-export-ft-qos-smsc-special-number, load-ft-qos-special-number

--- a/PROD/CONF/MVAS/load-ft-qos-special-number.conf
+++ b/PROD/CONF/MVAS/load-ft-qos-special-number.conf
@@ -35,7 +35,7 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar table_type=FTA"
 flux.hive.extra-conf += "--hivevar table_name=FT_QOS_SMSC_SPECIAL_NUMBER"
 flux.hive.extra-conf += "--hivevar insert_date_column=insert_date"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_QOS_SMSC_SPECIAL_NUMBER"
+flux.hive.extra-conf += "--hivevar database_table_name=AGG.FT_QOS_SMSC_SPECIAL_NUMBER"
 flux.hive.extra-conf += "--hivevar table_partition=state_date"
 
 
