--- a/PROD/CONF/SQOOP/sqoop-export-ft-qos-smsc-special-number.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-qos-smsc-special-number.conf
@@ -27,7 +27,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1000, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.FT_QOS_SMSC_SPECIAL_NUMBER WHERE STATE_DATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM AGG.FT_QOS_SMSC_SPECIAL_NUMBER WHERE STATE_DATE='###SLICE_VALUE###') A
 """
 
 flux.exec-query.execution.mode = "JDBC"
