--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -127,7 +127,7 @@ crontasks +=
 // Chargement FT IN ZTE DATA
 crontasks +=
   {
-    instanceId = "LOAD_FT_DATA",
+    instanceId = "LOAD_FT_IN_ZTE_DATA",
     cron = "0 12 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
     taskType = "HIVE"
@@ -157,7 +157,7 @@ crontasks +=
 // Chargement FT IN ZTE DATA_TRANSFER
 crontasks +=
   {
-    instanceId = "LOAD_FT_DATA_TRANSFER",
+    instanceId = "LOAD_FT_IN_ZTE_DATA_TRANSFER",
     cron = "0 14 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf",
     taskType = "HIVE"
