--- a/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-dola-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-ft-cbm-dola-daily.conf
@@ -26,7 +26,13 @@ flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
-flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_ft_cbm_dola_daily.hql"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_CBM_DOLA_DAILY"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_FT_CBM_DOLA_DAILY_PRE"
+flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_ft_cbm_dola_daily_part1.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_ft_cbm_dola_daily_part2.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_ft_cbm_dola_daily_part3.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CBM_DOLA_DAILY/compute_and_insert_into_ft_cbm_dola_daily_part4.hql"
+
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
