--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -319,11 +319,27 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_OTHER_VAS",
-    cron = "0 30 */3 * * ?",
+    cron = "0 34 */3 * * ?",
     configFile = "/PROD/CONF/VAS/load-ft-other-vas.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx256m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+
+crontasks +=
+  {
+    instanceId = "TRANSFER_IT_DATA_TO_PARTITIONED_TABLE",
+    cron = "0 40 */3 * * ?",
+    configFile = "/PROD/CONF/TMP/transfer-it-data-to-partitioned-table.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "180 minutes"
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx256m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
