--- a/PROD/CONF/VAS/load-ft-other-vas.conf
+++ b/PROD/CONF/VAS/load-ft-other-vas.conf
@@ -22,6 +22,8 @@ flux.exec-query.execution.mode = "JDBC"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/VAS/prequery_ft_other_vas.hql"
 
 
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/VAS/compute_and_insert_into_ft_other_vas.hql"
 
 
