update compute-kpi-in-cron-tasks and conf for ft-vas-revenue-detail

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -171,19 +171,19 @@ crontasks +=
   }
 
 
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_A_REFILL_RECEIVER",
-//    cron = "0 20 */1 * * ?",
-//    configFile = "/PROD/CONF/FT_A_REFILL_RECEIVER/load-ft-a-refill-receiver.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "55 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_FT_A_REFILL_RECEIVER",
+    cron = "0 20 */1 * * ?",
+    configFile = "/PROD/CONF/FT_A_REFILL_RECEIVER/load-ft-a-refill-receiver.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 
@@ -279,30 +279,10 @@ crontasks +=
   }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 crontasks +=
   {
     instanceId = "LOAD_FT_EMERGENCY_CREDIT_ACTIVITY",
-    cron = "0 50 */1 * * ?",
+    cron = "0 34 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-emergency-credit-activity.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -313,13 +293,10 @@ crontasks +=
     ]
   }
 
-
-
-
 crontasks +=
   {
     instanceId = "LOAD_FT_OTHER_VAS",
-    cron = "0 34 */3 * * ?",
+    cron = "0 36 */3 * * ?",
     configFile = "/PROD/CONF/VAS/load-ft-other-vas.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -330,18 +307,16 @@ crontasks +=
     ]
   }
 
-
-
 crontasks +=
   {
-    instanceId = "TRANSFER_IT_DATA_TO_PARTITIONED_TABLE",
-    cron = "0 40 */3 * * ?",
-    configFile = "/PROD/CONF/TMP/transfer-it-data-to-partitioned-table.conf",
+    instanceId = "FT_VAS_REVENUE_DAILY",
+    cron = "0 38 */1 * * ?",
+    configFile = "/PROD/CONF/VAS/load-ft-vas-revenue-detail.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "180 minutes"
+    timeout = "55 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx256m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
