automatisation de la FT_A_VAS_REVENUE_DAILY

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -335,3 +335,17 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_A_VAS_REVENUE_DAILY",
+    cron = "0 42 */1 * * ?",
+    configFile = "/PROD/CONF/VAS/load-ft-a-vas-revenue-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
