--- a/PROD/CONF/VAS/load-ft-a-vas-revenue-daily.conf
+++ b/PROD/CONF/VAS/load-ft-a-vas-revenue-daily.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "FT_A_VAS_REVENUE_DAILY"
+flux.name = "LOAD_FT_A_VAS_REVENUE_DAILY"
 
 flux.has-date-processing = true
 
