--- a/PROD/CONF/FT_IMEI_ONLINE/load-ft-imei-online.conf
+++ b/PROD/CONF/FT_IMEI_ONLINE/load-ft-imei-online.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_FT_A_REFILL_REVENUE"
+flux.name = "LOAD_FT_IMEI_ONLINE"
 
 flux.has-date-processing = true
 
