New raw folder for OM cdr

--- a/PROD/CONF/OM/load-it-om-all-balance.conf
+++ b/PROD/CONF/OM/load-it-om-all-balance.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_IT_OM_ALL_BALANCE"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/OM/AllBalance*"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/OM/ALLBALANCE/AllBalance*"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/OM/ALL_BALANCE"
 
 flux.hdfs.move-to-arch = true
