mise en prod de la ft_group_subscriber disconnect

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -367,3 +367,18 @@ crontasks +=
     ]
   }
 
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_GROUP_DISCONNECT_DAY",
+    cron = "0 46 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-group-disconnect-day.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
