Ajout dans le collect-cron-task des 03 crons de chargement des tables IT_OMNY_OPERATOR_BALANCE et IT_OMNY_ACCOUNT_SNAPSHOT

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -575,6 +575,51 @@ crontasks +=
     ]
   }
 
+// Chargement de IT_OMNY_OPERATOR_BALANCE
+crontasks +=
+  {
+    instanceId = "LOAD_IT_OMNY_OPERATOR_BALANCE",
+    cron = "30 5-49/30 * * * ?",
+    configFile = "/PROD/CONF/OM/load-it-omny-operator-balance.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "40 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+// Chargement de IT_OMNY_ACCOUNT_SNAPSHOT pour la source CHANNEL EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_IT_OMNY_ACCOUNT_SNAPSHOT_CHANNEL",
+    cron = "35 10-49/30 * * * ?",
+    configFile = "/PROD/CONF/OM/load-it-omny-account-snapshot-channel.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "40 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+// Chargement de IT_OMNY_ACCOUNT_SNAPSHOT pour la source SUBSCRIBER EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_IT_OMNY_ACCOUNT_SNAPSHOT_SUBSCRIBER",
+    cron = "35 10-49/30 * * * ?",
+    configFile = "/PROD/CONF/OM/load-it-omny-account-snapshot-subscribers.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "40 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 
 // Chargement des logs Nifi
 crontasks +=
