update conf for ft_a_refill_receiver

--- a/PROD/CONF/FT_A_REFILL_RECEIVER/load-ft-a-refill-receiver.conf
+++ b/PROD/CONF/FT_A_REFILL_RECEIVER/load-ft-a-refill-receiver.conf
@@ -5,7 +5,7 @@ flux.name = "LOAD_FT_A_REFILL_RECEIVER"
 
 flux.has-date-processing = true
 
-flux.slice-value-type = "MOUNTHLY"
+flux.slice-value-type = "MONTHLY"
 flux.slice-begin-value = -4
 flux.slice-end-value = -1
 flux.slice-step-value = 1
