update compute-kpi-in-cron-task and compute_ft_daily_status

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -382,3 +382,17 @@ crontasks +=
     ]
   }
 
+crontasks +=
+  {
+    instanceId = "LOAD_FT_OM_APGL_TRANSACTION",
+    cron = "0 48 */1 * * ?",
+    configFile = "/PROD/CONF/OM/load-ft-om-apgl-transaction.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
