Ft om bicec transaction

--- a/PROD/CONF/OM/load-ft-om-bicec-transaction.conf
+++ b/PROD/CONF/OM/load-ft-om-bicec-transaction.conf
@@ -17,10 +17,18 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/prequery_ft_om_bicec_transaction.hql"
+
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TTVMW_OM_BICEC_TRANS"
+
+flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_ttvmw_om_bicec_trans.hql"
+
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/validate_ttvmw_om_bicec_trans.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_ft_om_bicec_transaction.hql"
 
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TTVMW_OM_BICEC_TRANS"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 
