ft_om_bicec_transaction scheduled

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -260,6 +260,25 @@ crontasks +=
   }
 
 //--###**************************************#####---
+//--###        CALCULS FT_OM_BICEC_TRANSACTION
+//--###**************************************#####---
+
+// Calcul KPI OM TRANSACTIONS
+crontasks +=
+  {
+    instanceId = "LOAD_FT_OM_BICEC_TRANSACTION",
+    cron = "0 5 */1 * * ?",
+    configFile = "/PROD/CONF/OM/load-ft-om-bicec-transaction.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+  
+//--###**************************************#####---
 //--###        CALCULS OM
 //--###**************************************#####---
 
