--- a/PROD/CONF/OM/load-ttvmw-om-bicec-trans.conf
+++ b/PROD/CONF/OM/load-ttvmw-om-bicec-trans.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_FT_OM_BICEC_TRANSACTION"
+flux.name = "LOAD_TTVMW_OM_BICEC_TRANS"
 
 flux.has-date-processing = true
 
@@ -17,11 +17,11 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/validate_ttvmw_om_bicec_trans.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/prequery_ft_om_bicec_transaction.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_ft_om_bicec_transaction.hql"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TTVMW_OM_BICEC_TRANS"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/truncate_tt.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_ttvmw_om_bicec_trans.hql"
 
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
