--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -260,14 +260,33 @@ crontasks +=
   }
 
 //--###**************************************#####---
+//--###        CALCULS TTVMW_OM_BICEC_TRANS
+//--###**************************************#####---
+
+// Calcul TTVMW_OM_BICEC_TRANS
+crontasks +=
+  {
+    instanceId = "LOAD_TTVMW_OM_BICEC_TRANS",
+    cron = "0 5 */1 * * ?",
+    configFile = "/PROD/CONF/OM/load-ttvmw-om-bicec-trans.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+//--###**************************************#####---
 //--###        CALCULS FT_OM_BICEC_TRANSACTION
 //--###**************************************#####---
 
-// Calcul KPI OM TRANSACTIONS
+// Calcul FT_OM_BICEC_TRANSACTION
 crontasks +=
   {
     instanceId = "LOAD_FT_OM_BICEC_TRANSACTION",
-    cron = "0 5 */1 * * ?",
+    cron = "0 10 */1 * * ?",
     configFile = "/PROD/CONF/OM/load-ft-om-bicec-transaction.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -277,7 +296,7 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
-  
+
 //--###**************************************#####---
 //--###        CALCULS OM
 //--###**************************************#####---
