--- a/PROD/CONF/OM/load-ttvmw-om-bicec-trans.conf
+++ b/PROD/CONF/OM/load-ttvmw-om-bicec-trans.conf
@@ -19,7 +19,7 @@ flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/prequery_ft_om_bicec_transaction.hql"
 
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TTVMW_OM_BICEC_TRANS"
+//flux.inline.exec-queries += "TRUNCATE TABLE TMP.TTVMW_OM_BICEC_TRANS"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_ttvmw_om_bicec_trans.hql"
 
