--- a/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-voice-sms-da-usage-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-voice-sms-da-usage-daily.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_FT_VOICE_SMS_DA_USAGE_DAILY"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
+flux.slice-begin-value = -40
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -19,11 +19,18 @@ flux.has-post-queries = true
 
 flux.exec-query.execution.mode = "JDBC"
 
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/prequery_ft_voice_sms_da_usage_daily.hql"
+
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
+flux.inline.exec-queries += "TRUNCATE TABLE MON.TT_VOICE_SMS_DA_USAGE_DAILY"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/compute_and_insert_into_ft_voice_sms_da_usage_daily.hql"
 
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+flux.inline.post-exec-queries += "MERGE INTO MON.TT_VOICE_SMS_DA_USAGE_DAILY AS a USING DIM.DT_BALANCE_TYPE_ITEM AS b ON b.ACCT_ITEM_TYPE_ID = a.DA_NAME WHEN  MATCHED  THEN UPDATE SET DA_NAME= UPPER(b.ACCT_RES_NAME),DA_UNIT=UPPER(b.ACCT_RES_RATING_UNIT),DA_TYPE=UPPER(b.ACCT_RES_RATING_TYPE)"
+flux.inline.post-exec-queries += "INSERT INTO MON.FT_VOICE_SMS_DA_USAGE_DAILY PARTITION(TRANSACTION_DATE)  SELECT * FROM MON.TT_VOICE_SMS_DA_USAGE_DAILY"
+flux.inline.post-exec-queries += "TRUNCATE TABLE MON.TT_VOICE_SMS_DA_USAGE_DAILY"
 
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
