mise en prod de la chaine da_usage_daily

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -79,19 +79,19 @@ crontasks +=
   }
 
 
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_VOICE_SMS_DA_USAGE_DAILY",
-//    cron = "0 8 */1 * * ?",
-//    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-voice-sms-da-usage-daily.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "55 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_FT_VOICE_SMS_DA_USAGE_DAILY",
+    cron = "0 8 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-ft-voice-sms-da-usage-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 
