mise en prod du sms parc

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -396,3 +396,19 @@ crontasks +=
     ]
   }
 
+
+//// CALCUL DU SMS PARC
+crontasks +=
+{
+  instanceId = "COMPUTE_SMS_PARC",
+  cron = "0 50 */1 * * ?",
+  configFile = "/PROD/CONF/NOTIFICATION/sms_parc.conf",
+  taskType = "HIVE"
+  taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+  timeout = "30 minutes"
+  extraTaskParams : [
+    {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+    , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+  ]
+ }
+
