create conf , script and automate all IT for base identification

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -721,3 +721,47 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+// Chargement BASE IDENTIFICATION
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_CLIENT_SNAPID_DIRECTORY",
+    cron = "0 40 */1 * * ?",
+    configFile = "/PROD/CONF/IDENTIFICATION/load-it-client-snapid-directory.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "100 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_NOMAD_CLIENT_DIRECTORY",
+    cron = "0 40 */1 * * ?",
+    configFile = "/PROD/CONF/IDENTIFICATION/load-it-nomad-client-directory.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "100 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_PREPAID_CLIENT_DIRECTORY",
+    cron = "0 40 */1 * * ?",
+    configFile = "/PROD/CONF/IDENTIFICATION/load-it-prepaid-client-directory.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "100 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
