--- a/PROD/CONF/OM/load-ft-omny-balance.conf
+++ b/PROD/CONF/OM/load-ft-omny-balance.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_ACTIVATION_ALL_BY_DAY"
+flux.name = "LOAD_FT_OMNY_BALANCE"
 
 flux.has-date-processing = true
 
@@ -18,12 +18,11 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/RIA/ACTIVATION_ALL_BY_DAY/prequery_activation_all_by_day.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OMNY_BALANCE/prequery_ft_omny_balance.hql"
 
 
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/RIA/ACTIVATION_ALL_BY_DAY/compute_and_insert_into_activation_all_by_day.hql"
-
+flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OMNY_BALANCE/compute_and_insert_into_ft_omny_balance.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
