mise en prod de omny global activity

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -413,3 +413,19 @@ crontasks +=
   ]
  }
 
+
+//// CALCUL DU LOAD_FT_OMNY_GLOBAL_ACTIVITY
+crontasks +=
+{
+  instanceId = "LOAD_FT_OMNY_GLOBAL_ACTIVITY",
+  cron = "0 52 */1 * * ?",
+  configFile = "/PROD/CONF/OM/NOTIFICATION/sms_parc.conf",
+  taskType = "HIVE"
+  taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+  timeout = "30 minutes"
+  extraTaskParams : [
+    {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+    , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+  ]
+ }
+
