mise ne prod su sms om

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -429,3 +429,20 @@ crontasks +=
   ]
  }
 
+
+ //// CALCUL DU SMS OM
+ crontasks +=
+ {
+   instanceId = "COMPUTE_SMS_OM",
+   cron = "0 50 */1 * * ?",
+   configFile = "/PROD/CONF/NOTIFICATION/sms_om.conf",
+   taskType = "HIVE"
+   taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+   timeout = "30 minutes"
+   extraTaskParams : [
+     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+     , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+   ]
+  }
+
+
