--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -362,6 +362,20 @@ crontasks +=
     ]
   }
 
+// Chargement de IN ZTE EXTRACT IPP
+crontasks +=
+  {
+    instanceId = "LOAD_IT_ZTE_IPP_EXTRACT",
+    cron = "35 5-59/30 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-ipp-extract.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 // Chargement de IN ZTE EXTRACT BAL_SNAP
 crontasks +=
