update script and conf for SVI

--- a/PROD/CONF/collect-cti-cron-tasks.conf
+++ b/PROD/CONF/collect-cti-cron-tasks.conf
@@ -574,3 +574,35 @@ crontasks +=
     ]
   }
 
+/////////////////////////////////////////////////////
+//                   CDR SVI                       //
+////////////////////////////////////////////////////
+
+crontasks +=
+  {
+    instanceId = "LOAD_SVI_APPEL",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-svi-appel.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_SVI_NAVIGATION",
+    cron = "30 20 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-svi-navigation.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
