--- a/PROD/CONF/CTI/load-svi-navigation.conf
+++ b/PROD/CONF/CTI/load-svi-navigation.conf
@@ -28,4 +28,4 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=SVI_NAVIGATION"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name=CTI.SVI_NAVIGATION"
+flux.hive.extra-conf += "--hivevar tt_table_name=CTI.TT_SVI_NAVIGATION"
