update conf for IT_PREPAID_CLIENT_DIRECTORY

--- a/PROD/CONF/IDENTIFICATION/load-it-prepaid-client-directory.conf
+++ b/PROD/CONF/IDENTIFICATION/load-it-prepaid-client-directory.conf
@@ -28,4 +28,4 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=IT_PREPAID_CLIENT_DIRECTORY"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name=CTI.TT_PREPAID_CLIENT_DIRECTORY"
+flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_PREPAID_CLIENT_DIRECTORY"
