update and monitor FT_CLIENT_LAST_SITE_DAY

--- a/PROD/CONF/IN_ZTE/CBM/load-ft-client-last-site-day.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-ft-client-last-site-day.conf
@@ -26,11 +26,11 @@ flux.inline.exec-queries += "create temporary function fn_format_msisdn_to_9digi
 flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 
 
-flux.inline.exec-queries += "TRUNCATE TABLE MON.TT_CLIENT_LAST_SITE_DAY"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_CLIENT_LAST_SITE_DAY"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_LAST_SITE_DAY/compute_and_insert_into_ft_client_last_site_day_part1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_LAST_SITE_DAY/compute_and_insert_into_ft_client_last_site_day_part2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_LAST_SITE_DAY/compute_and_insert_into_ft_client_last_site_day_part3.hql"
-flux.inline.post-exec-queries += "TRUNCATE TABLE MON.TT_CLIENT_LAST_SITE_DAY"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.TT_CLIENT_LAST_SITE_DAY"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
