--- a/PROD/CONF/IN_ZTE/CBM/load-ft-client-site-traffic-day.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-ft-client-site-traffic-day.conf
@@ -31,10 +31,11 @@ flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
+
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_CLIENT_CELL_TRAFIC_DAY"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_SITE_TRAFFIC_DAY/compute_and_insert_into_tt_client_cell_trafic_day.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_SITE_TRAFFIC_DAY/compute_and_insert_into_ft_client_site_traffic_day.hql"
-
-flux.inline.post-exec-queries += "TRUNCATE TABLE MON.TT_CLIENT_CELL_TRAFIC_DAY"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_CLIENT_CELL_TRAFIC_DAY"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
