--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -623,3 +623,44 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+  crontasks +=
+    {
+      instanceId = "LOAD_FT_OMNY_ACCOUNT_SNAPSHOT",
+      cron = "0 2 */1 * * ?",
+      configFile = "/PROD/CONF/OM/load-ft-omny-account-snapshot.conf",
+      taskType = "HIVE"
+      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+      timeout = "60 minutes"
+      extraTaskParams : [
+        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+      ]
+    }
+
+    {
+      instanceId = "LOAD_FT_OMNY_BALANCE",
+      cron = "0 4 */1 * * ?",
+      configFile = "/PROD/CONF/OM/load-ft-omny-balance.conf",
+      taskType = "HIVE"
+      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+      timeout = "60 minutes"
+      extraTaskParams : [
+        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+      ]
+    }
+
+{
+      instanceId = "LOAD_FT_OMNY_BALANCE_SNAPSHOT",
+      cron = "0 6 */1 * * ?",
+      configFile = "/PROD/CONF/OM/load-ft-omny-balance-snapshot.conf",
+      taskType = "HIVE"
+      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+      timeout = "60 minutes"
+      extraTaskParams : [
+        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+      ]
+    }
+
