--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -489,3 +489,19 @@ crontasks +=
 
 
 
+{
+      instanceId = "UPDATE_DT_BASE_IDENTIFICATION",
+      cron = "0 58 */1 * * ?",
+      configFile = "/PROD/CONF/IDENTIFICATION/update_dt_base_identification.conf",
+      taskType = "HIVE"
+      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+      timeout = "60 minutes"
+      extraTaskParams : [
+        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+      ]
+    }
+
+
+
+
