update script for it_nomad_client_directory

--- a/PROD/CONF/IDENTIFICATION/load-it-nomad-client-directory.conf
+++ b/PROD/CONF/IDENTIFICATION/load-it-nomad-client-directory.conf
@@ -19,7 +19,7 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.exec-queries += "/PROD/SCRIPTS/IT/IDENTIFICATION/IT_NOMAD_CLIENT_DIRECTORY/create_it_nomad_client_directory.hql"
+flux.exec-queries += "/E:\ORANGE\projets2\hdfs-prod-bk\PROD\SCRIPTS\IT\IDENTIFICATION\IT_NOMAD_CLIENT_DIRECTORY\insert_into_it_nomad_client_directory.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
