update compute kpi

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -459,7 +459,7 @@ crontasks +=
         , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
       ]
     }
-
+crontasks +=
     {
       instanceId = "LOAD_FT_OMNY_BALANCE",
       cron = "0 54 */1 * * ?",
@@ -473,6 +473,7 @@ crontasks +=
       ]
     }
 
+crontasks +=
 {
       instanceId = "LOAD_FT_OMNY_BALANCE_SNAPSHOT",
       cron = "0 56 */1 * * ?",
@@ -488,7 +489,7 @@ crontasks +=
 
 
 
-
+crontasks +=
 {
       instanceId = "UPDATE_DT_BASE_IDENTIFICATION",
       cron = "0 58 */1 * * ?",
