orchestration de la chaine sms usage

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -23,7 +23,7 @@ cronmanagerId = "008"
 crontasks +=
   {
     instanceId = "LOAD_FT_COMMERCIAL_SUBSCRIB_SUMMARY",
-    cron = "0 0 */1 * * ?",
+    cron = "0 55-59/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-commercial-subscrib-summary.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -38,7 +38,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_GROUP_SUBSCRIBER_SUMMARY",
-    cron = "0 2 */1 * * ?",
+    cron = "0 20-59/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-group-subscriber-summary.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -53,7 +53,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_A_SUBSCRIBER_SUMMARY",
-    cron = "0 4 */1 * * ?",
+    cron = "0 20-59/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-subscriber-summary.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -145,7 +145,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "FT_OG_IC_CALL_SNAPSHOT",
-    cron = "0 16 */1 * * ?",
+    cron = "0 20-59/20 * * * ?",
     configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-og-ic-call-snapshot.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -161,7 +161,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "FT_ACCOUNT_ACTIVITY",
-    cron = "0 18 */1 * * ?",
+    cron = "0 40-59/20 * * * ?",
     configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
