update de la prerequette de fta_subscriber_summary

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -233,7 +233,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_CONTRACT_SNAPSHOT",
-    cron = "0 0-59/20 * * * ?",
+    cron = "0 50/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
