--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-emergency-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-emergency-data.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_FT_EMERGENCY_DATA"
+flux.name = "LOAD_KPI_FT_EMERGENCY_DATA"
 
 flux.has-date-processing = true
 
@@ -19,26 +19,17 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_DATA/prequery_ft_emergency_data.hql"
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GLOBAL_ACTIVITY/prequery_load_kpi_ft_emergency_data.hql"
 
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
-flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_DATA/compute_and_insert_into_ft_emergency_data.hql"
+flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_emergency_data_activity.hql"
 
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-
-
-flux.hive.extra-conf += "--hivevar cdr_type=ZTE_ED_CDR"
-flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_EMERGENCY_DATA"
-flux.hive.extra-conf += "--hivevar it_partition_column=TRANSACTION_DATE"
-flux.hive.extra-conf += "--hivevar date_offset=3"
-flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
-flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
 
