--- a/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf
@@ -15,7 +15,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
@@ -24,25 +24,11 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/prequery_ft_cr
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/compute_and_insert_into_ft_credit_transfer.hql"
 
-flux.inline.post-exec-queries += "DELETE FROM AGG.FT_A_CREDIT_TRANSFER_REVENUE WHERE REFILL_DATE = '###SLICE_VALUE###'"
-flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/compute_and_insert_into_ft_a_credit_transfer_revenue.hql"
-
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_credit_transfer_activity.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_credit_transfer.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 flux.hive.extra-conf += "--hivevar min_files_count=1"
-
-
-
-flux.hive.extra-conf += "--hivevar table_type=FT"
-flux.hive.extra-conf += "--hivevar table_name=FT_CREDIT_TRANSFER"
-flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_CREDIT_TRANSFER"
-flux.hive.extra-conf += "--hivevar table_partition=REFILL_DATE"
 
 
