--- a/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
@@ -15,7 +15,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
@@ -23,13 +23,6 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/prequery_ft_subsc
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_ft_subscription.hql"
-
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_ft_a_subscription.hql"
-//flux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_SUBSCRIPTION' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  AGG.FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###')T"
-
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_subsc_activity.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_subsc.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
@@ -41,12 +34,4 @@ flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_SUBSCRIPTION"
 flux.hive.extra-conf += "--hivevar it_partition_column=CREATEDDATE"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
 flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
-
-
-
-flux.hive.extra-conf += "--hivevar table_type=FT"
-flux.hive.extra-conf += "--hivevar table_name=FT_SUBSCRIPTION"
-flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_SUBSCRIPTION"
-flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
 
