--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-a-subscription.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_FT_A_SUBSCRIPTION"
+flux.name = "LOAD_KPI_FT_A_SUBSCRIPTION"
 
 flux.has-date-processing = true
 
@@ -17,9 +17,9 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/prequery_ft_a_subscription.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GLOBAL_ACTIVITY/prequery_load_kpi_ft_a_subscription.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_ft_a_subscription.hql"
+flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_subsc_activity.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
