--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-contract-snapshot.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-contract-snapshot.conf
@@ -1,13 +1,13 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_FT_EMERGENCY_DATA"
+flux.name = "LOAD_KPI_FT_CONTRACT_SNAPSHOT"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
 flux.slice-begin-value = -14
-flux.slice-end-value = -1
+flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -19,26 +19,16 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_DATA/prequery_ft_emergency_data.hql"
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
-
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GLOBAL_ACTIVITY/prequery_load_kpi_ft_contract_snapshot.hql"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
-flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
-flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_DATA/compute_and_insert_into_ft_emergency_data.hql"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 
+flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_contract_snapshot_activity.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-
-
-flux.hive.extra-conf += "--hivevar cdr_type=ZTE_ED_CDR"
-flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_EMERGENCY_DATA"
-flux.hive.extra-conf += "--hivevar it_partition_column=TRANSACTION_DATE"
-flux.hive.extra-conf += "--hivevar date_offset=3"
-flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
-flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
 
