--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-overdraft.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-ft-overdraft.conf
@@ -1,13 +1,13 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_FT_A_SUBSCRIPTION"
+flux.name = "LOAD_KPI_FT_OVERDRAFT"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
 flux.slice-begin-value = -14
-flux.slice-end-value = 0
+flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -17,9 +17,11 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/prequery_ft_a_subscription.hql"
+flux.exec-query.execution.mode = "JDBC"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_ft_a_subscription.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GLOBAL_ACTIVITY/prequery_load_kpi_ft_overdraft.hql"
+
+flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_overdraft_activity.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
