--- a/PROD/CONF/IDENTIFICATION/update_dt_base_identification.conf
+++ b/PROD/CONF/IDENTIFICATION/update_dt_base_identification.conf
@@ -33,13 +33,18 @@ flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "create temporary function FN_FORMAT_MSISDN_TO_9DIGITS as 'cm.orange.bigdata.udf.FormatMsisdnTo9Digits'"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.inline.exec-queries += "TRUNCATE TABLE TT.TT_IDENTIFICATION_MSISDN"
+flux.inline.exec-queries += "TRUNCATE TABLE TT.DT_BASE_IDENTIFICATION"
+flux.inline.exec-queries += "INSERT INTO TT.DT_BASE_IDENTIFICATION SELECT * FROM MON.BACKUP_DT_BASE_IDENTIFICATION WHERE PROCESSING_DATE IN (SELECT MAX(PROCESSING_DATE) FROM MON.BACKUP_DT_BASE_IDENTIFICATION )"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/merge_prepaid_client_in_dt_base_identification.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/merge_snap_id_in_dt_base_identification.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/compute_dt_base_identification.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/merge_nomad_in_dt_base_identification.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/insert_bad_identification_msisdn.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/insert_dt_base_identification.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/insert_dt_base_identification.hql2"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/backup_dt_base_identification.hql"
 flux.inline.post-exec-queries += "TRUNCATE TABLE TT.TT_IDENTIFICATION_MSISDN"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TT.DT_BASE_IDENTIFICATION"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
