update de la dim

--- a/PROD/CONF/IDENTIFICATION/update_dt_base_identification.conf
+++ b/PROD/CONF/IDENTIFICATION/update_dt_base_identification.conf
@@ -34,7 +34,7 @@ flux.inline.exec-queries += "create temporary function FN_FORMAT_MSISDN_TO_9DIGI
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.inline.exec-queries += "TRUNCATE TABLE TT.TT_IDENTIFICATION_MSISDN"
 flux.inline.exec-queries += "TRUNCATE TABLE TT.DT_BASE_IDENTIFICATION"
-flux.inline.exec-queries += "INSERT INTO TT.DT_BASE_IDENTIFICATION SELECT * FROM MON.BACKUP_DT_BASE_IDENTIFICATION WHERE PROCESSING_DATE IN (SELECT MAX(PROCESSING_DATE) FROM MON.BACKUP_DT_BASE_IDENTIFICATION )"
+flux.inline.exec-queries += "INSERT INTO TT.DT_BASE_IDENTIFICATION SELECT  MSISDN, NOM, PRENOM, NEE_LE, NEE_A, PROFESSION, QUARTIER_RESIDENCE, VILLE_VILLAGE, CNI, DATE_IDENTIFICATION, TYPE_DOCUMENT, FICHIER_CHARGEMENT, DATE_INSERTION, EST_SNAPPE,IDENTIFICATEUR,DATE_MISE_A_JOUR, DATE_TABLE_MIS_A_JOUR, GENRE, CIVILITE, TYPE_PIECE_IDENTIFICATION, PROFESSION_IDENTIFICATEUR, MOTIF_REJET FROM MON.BACKUP_DT_BASE_IDENTIFICATION WHERE PROCESSING_DATE IN (SELECT MAX(PROCESSING_DATE) FROM MON.BACKUP_DT_BASE_IDENTIFICATION )"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/merge_prepaid_client_in_dt_base_identification.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/merge_snap_id_in_dt_base_identification.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/compute_dt_base_identification.hql"
