update de la dim

--- a/PROD/CONF/IDENTIFICATION/update_dt_base_identification.conf
+++ b/PROD/CONF/IDENTIFICATION/update_dt_base_identification.conf
@@ -41,7 +41,7 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/compute_dt_base_id
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/merge_nomad_in_dt_base_identification.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/insert_bad_identification_msisdn.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/insert_dt_base_identification.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/insert_dt_base_identification.hql2"
+flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/insert_dt_base_identification2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DT_BASE_IDENTIFICATION/backup_dt_base_identification.hql"
 flux.inline.post-exec-queries += "TRUNCATE TABLE TT.TT_IDENTIFICATION_MSISDN"
 flux.inline.post-exec-queries += "TRUNCATE TABLE TT.DT_BASE_IDENTIFICATION"
