mise à jour des confs de l'eqt

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -748,7 +748,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "COMPUTE_FT_DAILY_STATUS",
-    cron = "0 44 */1 * * ?",
+    cron = "0 44/20 * * * ?",
     configFile = "/PROD/CONF/MONITORING/compute_ft_daily_status.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
