update script for compute sms fichiers

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -338,3 +338,30 @@ crontasks +=
     ]
   }
 
+crontasks +=
+  {
+    instanceId = "COMPUTE_SMS_FICHIERS_IN",
+    cron = "0 42 */1 * * ?",
+    configFile = "/PROD/CONF/NOTIFICATION/compute_sms_fichiers_in.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "COMPUTE_SMS_FICHIERS",
+    cron = "0 42 */1 * * ?",
+    configFile = "/PROD/CONF/NOTIFICATION/compute_sms_fichiers.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
