--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -365,3 +365,17 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+crontasks +=
+  {
+    instanceId = "FT_DATA_CONSO_MSISDN_DAY",
+    cron = "0 55 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/CLIENT360/load-ft-data-conso-msisdn-day.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
