column data type changedd

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -292,10 +292,10 @@ crontasks +=
     ]
   }
 
-// Chargement FT IN ZTE SUBCRIPTION_MSISDN_DAY
+// Chargement LOAD_FT_SUBSCRIPTION_MSISDN_DAY
 crontasks +=
   {
-    instanceId = "LOAD_FT_SUBCRIPTION_MSISDN_DAY",
+    instanceId = "LOAD_FT_SUBSCRIPTION_MSISDN_DAY",
     cron = "55 10/20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-subscription-msisdn-day.conf",
     taskType = "HIVE"
