mise en prod de LOAD_FT_IMEI_TRAFFIC_MONTHLY

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -379,3 +379,17 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_IMEI_TRAFFIC_MONTHLY",
+    cron = "0 56 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/CLIENT360/load-ft-imei-traffic-monthly.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
