--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -341,7 +341,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "COMPUTE_SMS_FICHIERS_IN",
-    cron = "0 42 */1 * * ?",
+    cron = "0 42 03-08 * * ? *",
     configFile = "/PROD/CONF/NOTIFICATION/compute_sms_fichiers_in.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -355,7 +355,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "COMPUTE_SMS_FICHIERS",
-    cron = "0 44 */1 * * ?",
+    cron = "0 44 03-08 * * ? *",
     configFile = "/PROD/CONF/NOTIFICATION/compute_sms_fichiers.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
