ft msisdn premium month

--- a/PROD/CONF/CLIENT360/load-ft-msisdn-premium-month.conf
+++ b/PROD/CONF/CLIENT360/load-ft-msisdn-premium-month.conf
@@ -19,9 +19,9 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_MSISDN_PREMIUM_MONTH/prequery_ft_msisdn_premium_month.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/"
+flux.exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_MSISDN_PREMIUM_MONTH/compute_and_insert_into_ft_msisdn_premium_month.hql"
 
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
