--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -997,4 +997,19 @@ crontasks +=
   }
 
 
+crontasks +=
+  {
+    instanceId = "LOAD_FT_MSISDN_PREMIUM_MONTH",
+    cron = "0 0 12 * * ?",
+    configFile = "/PROD/CONF/CLIENT360/load-ft-msisdn-premium-month.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
 
