edit compute kpi for FT_CLIENT_LAST_SITE_DAY

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -368,6 +368,20 @@ crontasks +=
 
 crontasks +=
   {
+    instanceId = "LOAD_FT_CLIENT_LAST_SITE_DAY",
+    cron = "0 46 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/CBM/load-ft-client-last-site-day.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+crontasks +=
+  {
     instanceId = "LOAD_FT_DATA_CONSO_MSISDN_DAY",
     cron = "0 55 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/CLIENT360/load-ft-data-conso-msisdn-day.conf",
