update du cron de la photo et account activity

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -644,7 +644,37 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_CONTRACT_SNAPSHOT",
-    cron = "0 37/20 * * * ?",
+    cron = "0 10/20 0-4 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+// Chargement FT IN ZTE CONTRACT_SNAPSHOT
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT2",
+    cron = "0 10/10 5-8 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+// Chargement FT IN ZTE CONTRACT_SNAPSHOT
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT3",
+    cron = "0 10/20 9-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
