--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -161,7 +161,33 @@ crontasks +=
 crontasks +=
   {
     instanceId = "FT_ACCOUNT_ACTIVITY",
-    cron = "0 15/20 * * * ?",
+    cron = "0 15/20 0-5 * * ?",
+    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+crontasks +=
+  {
+    instanceId = "FT_ACCOUNT_ACTIVITY1",
+    cron = "0 15/10 6-8 * * ?",
+    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+crontasks +=
+  {
+    instanceId = "FT_ACCOUNT_ACTIVITY2",
+    cron = "0 15/20 9-23 * * ?",
     configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
