--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -382,6 +382,20 @@ crontasks +=
 
 crontasks +=
   {
+    instanceId = "COMPUTE_SMS_SPOOL",
+    cron = "0 48 03-08 * * ? *",
+    configFile = "/PROD/CONF/NOTIFICATION/compute_sms_spool.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+crontasks +=
+  {
     instanceId = "LOAD_FT_DATA_CONSO_MSISDN_DAY",
     cron = "0 55 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/CLIENT360/load-ft-data-conso-msisdn-day.conf",
