edit conf for compute sms fichier IN

--- a/PROD/CONF/NOTIFICATION/compute_sms_fichiers_in.conf
+++ b/PROD/CONF/NOTIFICATION/compute_sms_fichiers_in.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "COMPUTE_SMS_FICHIERS_IN"
+flux.name = "COMPUTE_IN_SMS_FICHIERS"
 
 flux.has-date-processing = true
 
