--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -366,7 +366,7 @@ crontasks +=
 
 crontasks +=
   {
-    instanceId = "COMPUTE_SMS_FICHIERS_IN",
+    instanceId = "COMPUTE_IN_SMS_FICHIERS",
     cron = "0 42 03-08 * * ? *",
     configFile = "/PROD/CONF/NOTIFICATION/compute_sms_fichiers_in.conf",
     taskType = "HIVE"
